err/satyr.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloudpickle'...
Listing './lib/python3.5/site-packages/cloudpickle-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/satyr'...
Listing './lib/python3.5/site-packages/satyr/apis'...
Compiling './lib/python3.5/site-packages/satyr/executor.py'...
***   File "./lib/python3.5/site-packages/satyr/executor.py", line 53
    raise exc_type, exc_value, traceback
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/satyr/proxies'...
Compiling './lib/python3.5/site-packages/satyr/scheduler.py'...
***   File "./lib/python3.5/site-packages/satyr/scheduler.py", line 58
    raise exc_type, exc_value, traceback
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/satyr-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
